crosshair/examples/PEP316/bugs_detected/hash_consistent_with_equals.out
hash_consistent_with_equals.py:32: error: "post: implies(__return__, hash(self) == hash(other))" yields false when calling __eq__(Apples(2, ''), Apples(3, '')) (which returns True)
